fix: Openapi generation
